# comfyui-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
comfyui_api/: __init__.py  server.py
comfyui_mcp/: __init__.py  server.py
hermes/: mcp.json
wrapper/: Dockerfile  api_wrapper.py  comfy_workflow.json  docker-compose.yml  entrypoint.sh
