[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-openai-api"
version = "1.0.0"
description = "OpenAI-compatible image generation API backed by the ComfyUI on-demand GPU wrapper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["comfyui_api*"]

[project.scripts]
comfyui-openai-api = "comfyui_api.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
